2009-02-23  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* definitions.inc:
	updated for 2.5.27 release

	* doc/manpages:
	regenerated man pages

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.27

2008-05-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* definitions.inc:
	really update to 2.5.26

2008-05-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* definitions.inc:
	updated for 2.5.26 release

	* doc/manpages:
	regenerated man pages

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.26

2008-03-03  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* definitions.inc:
	updated to point to 2.5.25

	* news/index.php:
	regenerated

2008-01-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* documentation/manpages/unstable:
	regenerated without duplicates

	* documentation/manpages/manpages2php:
	fix conv_link_target calls for all links
	don't include hidden files

	* doc/unstable:
	* documentation/manpages/unstable:
	regenerated

	* documentation/manpages/manpages2php:
	use docbook html body when available

	* doc/updatedoc:
	add script to update html documentation

	* doc/unstable:
	updated html documentation

2007-11-24  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* definitions.inc:
	updated for 2.5.24 release

	* doc/manpages:
	regenerated man pages

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.24

2007-09-03  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* download/index.php:
	add links to news on download page

2007-09-01  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* documentation/manpages:
	regenerated manpages without old manpage left in tree

	* doc/unstable:
	updated html documentation

2007-09-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* definitions.inc:
	updated for 2.5.23 release

	* doc/manpages:
	regenerated man pages

	* authors/index.php:
	* news/index.php: